* Removed extra padding on information and description classes (index.css, compat.css) [Bug 3925]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9553 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/compat.css
+++ b/Themes/default/css/compat.css
@@ -183,7 +183,7 @@ table.table_grid thead tr.catbg th.smalltext
 }
 .information
 {
-	padding: 1em;
+	padding: 0.5em 1em;
 	font-size: 0.9em;
 	line-height: 1.5em;
 	border: 1px solid #bbb;
