--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -624,7 +624,7 @@ a.moderation_link, a.moderation_link:visited
 /* a descriptive style */
 .description, .plainbox
 {
-	padding: 0.5em 1em 1em 1em;
+	padding: 0.5em 1em;
 	font-size: 0.9em;
 	line-height: 1.4em;
 	border: 1px solid #bbb;
@@ -634,7 +634,7 @@ a.moderation_link, a.moderation_link:visited
 /* an informative style */
 .information
 {
-	padding: 0.5em 1em 1em 1em;
+	padding: 0.5em 1em;
 	font-size: 0.9em;
 	line-height: 1.3em;
 	border: 1px solid #bbb;
